--- a/application.css
+++ b/application.css
@@ -62,7 +62,7 @@ h2 {
 
 .link {
   stroke-width: 1px;
-  stroke: #999;
+  stroke: #aaa;
 }
 
 ul {
@@ -90,4 +90,8 @@ ul > li > p {
 
 pre {
   white-space: pre-wrap;
+}
+
+.dimmed {
+  opacity: 0.9;
 }
