--- a/application.css
+++ b/application.css
@@ -1,3 +1,6 @@
+/* Copyright (c) 2016, The MITRE Corporation. All rights reserved.
+ * See LICENSE.txt for complete terms. */
+
 html, body {
   padding: 0;
   margin: 0;
@@ -61,7 +64,7 @@ h2 {
 }
 
 .link {
-  stroke-width: 1px;
+  stroke-width: 5;
   stroke: #aaa;
 }
 
