Implements parsing STIX 2.0 from the textarea. Minor cosmetic changes.

--- a/application.css
+++ b/application.css
@@ -63,9 +63,9 @@ svg {
   background-color: #fafafa;
 }
 
-#pasted {
-  height: 100px;
-  width: 200px;
+#paste-area {
+  height: 25em;
+  width: 40em;
 }
 
 h2 {
