Makes the Firefox render fix slightly less repulsive

--- a/application.css
+++ b/application.css
@@ -115,8 +115,7 @@ pre {
   stroke-width: 2;
 }
 
-/*.selected {
-  Moved to html to accomodate Firefox's
-  weird rendering issue
-  filter: url(#drop-shadow);
-}*/
+.selected {
+  /* Explicitely specify html file because Firefox's renderer is super picky */
+  filter: url("index.html#drop-shadow");
+}
