Clicking header returns page to load conditions

--- a/application.css
+++ b/application.css
@@ -135,6 +135,15 @@ pre {
   stroke-width: 2;
 }
 
+.linkish:hover {
+  color: blue;
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
+}
+
 /*.selected {
   >>> This style is in the header of the index.html file for comptibility reasons! <<<
   filter: url("#drop-shadow");
